# OmniShare

./: .gitignore  BLE Service Data Payload Structure.txt  Cargo.toml  HANDOVER_DOCUMENTATION.md  OmniShare_Synopsis.md  OmniShare_Technical_Guide.md  README.md  Reverse Engineer Android Quick Share.txt
crates/omni-cli/: Cargo.toml
crates/omni-cli/src/: main.rs
crates/omni-core/: Cargo.toml  build.rs
crates/omni-core/src/: connection_manager.rs  lib.rs
crates/omni-core/src/discovery/: ble_native.rs  mdns_native.rs  mod.rs  scanner.rs
crates/omni-core/src/proto/: mod.rs  quick_share.proto  ukey2.proto  wire_format.proto
crates/omni-core/src/security/: engine.rs  mod.rs  role.rs  ukey2.rs
crates/omni-core/src/transfer/: mod.rs  outbound.rs
omni/: Cargo.toml  build.rs
omni-gui/: package-lock.json  package.json
omni-gui/src/: index.html  main.js  styles.css
omni-gui/src-tauri/: Cargo.toml  tauri.conf.json
omni-gui/src-tauri/src/: commands.rs  lib.rs  main.rs
omni/src/: connection_manager.rs  main.rs  wifi_direct.rs
omni/src/discovery/: ble.rs  ble_native.rs  mdns_native.rs  mod.rs
omni/src/proto/: mod.rs  quick_share.proto  securegcm.proto  ukey2.proto  wire_format.proto
omni/src/protocol/: mod.rs  ukey2_engine.rs
omni/src/security/: engine.rs  mod.rs  ukey2.rs
