[workspace]
resolver = "2"
members = [
    "crates/omni-core",
    "crates/omni-cli",
    "omni-gui/src-tauri",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Chloy Costa"]
license = "MIT"
repository = "https://github.com/Chloy02/OmniShare"

[workspace.dependencies]
# Shared dependencies across workspace
anyhow = "1.0"
tokio = { version = "1.36", features = ["full"] }
prost = "0.12"
hex = "0.4"
rand = "0.8"

# Crypto
ring = "0.17"
aes = "0.8"
cbc = "0.1"
hmac = "0.12"
sha2 = "0.10"
hkdf = "0.12"

# Async
futures = "0.3"
