[package]
name = "omni"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
# System Integration
bluer = { version = "0.17", features = ["bluetoothd"] }
zbus = { version = "4.0", features = ["tokio"] }
# Crypto & Utils
ring = "0.17"
rand = "0.8"
hex = "0.4"
uuid = "1.0"
prost = "0.12"
futures = "0.3"
mdns-sd = "0.10"
base64 = "0.22"

[build-dependencies]
prost-build = "0.12"
