[package]
name = "omni-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "omnishare"
path = "src/main.rs"

[dependencies]
omni-core = { path = "../omni-core" }
clap = { version = "4.5", features = ["derive"] }
tokio = { workspace = true }
async-trait = "0.1"
anyhow = { workspace = true }
indicatif = "0.17"
