[package]
name = "omni-gui"
version = "0.1.0"
description = "OmniShare - Quick Share for Linux"
authors = ["OmniShare"]
edition = "2021"

[lib]
name = "omni_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"

# OmniShare core library (path to parent workspace crate)
omni-core = { path = "../../crates/omni-core" }
